fix image gap

--- a/Games-and-Apps.css
+++ b/Games-and-Apps.css
@@ -851,8 +851,8 @@
 
   .u-section-1 .u-group-6 {
     min-height: 155px;
-    margin-top: 20px;
-    margin-bottom: initial;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .u-section-1 .u-text-7 {
@@ -880,8 +880,6 @@
 
   .u-section-1 .u-group-8 {
     min-height: 156px;
-    margin-top: 20px;
-    margin-bottom: initial;
     width: auto;
     margin-right: initial;
     margin-left: initial;
